# ChangeLog for dev-tex/latex2html
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/latex2html/ChangeLog,v 1.51 2009/12/26 17:35:53 pva Exp $

  26 Dec 2009; Peter Volkov <pva@gentoo.org> latex2html-2008.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

  05 Aug 2009; Alexis Ballier <aballier@gentoo.org> latex2html-2008.ebuild:
  assign RDEPEND explicitly

  05 Aug 2009; Alexis Ballier <aballier@gentoo.org>
  -latex2html-2002.2.1_pre20041025-r1.ebuild:
  remove old

  30 Jan 2009; Jeroen Roovers <jer@gentoo.org> latex2html-2008.ebuild:
  Stable for HPPA (bug #253990).

  23 Jan 2009; Raúl Porcel <armin76@gentoo.org> latex2html-2008.ebuild:
  arm/ia64/s390/sh stable wrt #253990

  10 Jan 2009; Markus Meier <maekke@gentoo.org> latex2html-2008.ebuild:
  amd64/x86 stable, bug #253990

  10 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  latex2html-2008.ebuild:
  Stable on alpha, bug #253990

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> latex2html-2008.ebuild:
  Marked ppc/ppc64 stable for bug #253990.

  09 Jan 2009; Ferris McCormick <fmccor@gentoo.org> latex2html-2008.ebuild:
  Sparc stable, Bug #253990.

*latex2html-2008 (31 Oct 2008)

  31 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  files/latex2html-convert-length.patch, +files/latex2html-destdir.patch,
  +latex2html-2008.ebuild:
  Version bump. Remove files already provided by our latex installs, bug
  #240980. Install latex files to texmf-site. Apply patch from bug #143831
  to avoid using obsolete functions.

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  latex2html-2002.2.1_pre20041025-r1.ebuild:
  virtual/tetex -> virtual/latex-base

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org>
  latex2html-2002.2.1_pre20041025-r1.ebuild:
  variable quoting

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org>