@@ -3,6 +3,6 @@ AUX latex2html-destdir.patch 703 RMD160 2b08bb440c4aacd3b23a05cb34d56597de8fd2a5
 AUX latex2html-extract-major-version.patch 635 RMD160 5bfc884c149a19f9f3f3608b48e77c9106edd8e0 SHA1 8c3ff25c41f68e1cafe9ba580f3f38d8b1fa28f3 SHA256 265327a28fdbec750a32fc32999625ef254ec80736f170e645e1355d51df5c04
 AUX latex2html-perl_name.patch 445 RMD160 6f93bdc394f8c240542cd6a224864c3b4b27420d SHA1 3fd8480e23e3c06b8cb9876cc82a42b61e21386b SHA256 41dcf9d9b46691c34bddbae39faccbfeadf6beb2e19a4ac18af4a186758289c9
 DIST latex2html-2008.tar.gz 1133054 RMD160 a95f06253d6fc8808ffedcad7edf8235194d7756 SHA1 5e0aa47572e0c13a4c5da51e963d5496be3f86e7 SHA256 59456815a3984250c295d3d5c46b85646038db8db2735cdc0d3780cf4da337ad
-EBUILD latex2html-2008.ebuild 2547 RMD160 e05f289d9bd623f06e049e8ff2dae9ce32bacdc4 SHA1 b3036743cf1c01fad012bd0980352e33faa6b868 SHA256 e12f723916dfb4bc21c5aab6e7342cd147e904792e46c3f059dc8cc1e48a1387
-MISC ChangeLog 9035 RMD160 9f2cd07a36a7446ad917bd24f7a1ce7793f5107b SHA1 6649735204c4c6a4896f9b845247ce1688e4bbde SHA256 0f98cabda54adfa2776486015309d722eed9f1987a53848848acc0a483f01a19
+EBUILD latex2html-2008.ebuild 2643 RMD160 f538abb9e5adf35d674f1f50d88df43a1be3703a SHA1 b1681859041c7b36137b494cb06dbee1c2f4b775 SHA256 738da3baee4be51de4375bf6fad68eed412e56df6fcd45b4c8c1b445aea73b36
+MISC ChangeLog 9206 RMD160 192628105b51b16f370efe9426c71b823def19bc SHA1 50d50c96fc0f1583c240bfd2c1cd68e991a63f84 SHA256 6b57516b1df4927b538cd65dfb405c59aef8560d14189a1a4cc5a56bcf8546be
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
